force-app/main/default/objects/vlocity_ins__VlocityWebTrackingEventType__c/vlocity_ins__VlocityWebTrackingEventType__c.object-meta.xml
<CustomObject>
    <description>VlocityWebTrackingEventType enables a technical admin to specify a javascript fragment that will call the tracker API when the event fires. It uses substitution variables to represent dynamic parts of the payload.</description>
    <label>Vlocity Web Tracking Event Type</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Web Tracking Event Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>