force-app/main/default/objects/vlocity_ins__VlocityWebTrackingEventType__c/fields/vlocity_ins__InclusionRule__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InclusionRule__c</fullName>
    <description>Expression that evaluates to true or false. If not blank or null, the expression is evaluated and if true event is tracked, if false then the event is not tracked.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Expression that evaluates to true or false. If not blank or null, the expression is evaluated and if true event is tracked, if false then the event is not tracked.</inlineHelpText>
    <label>Inclusion Rule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>