force-app/main/default/objects/vlocity_ins__VlocityWebTrackingEventType__c/fields/vlocity_ins__VlocityWebTrackingConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__VlocityWebTrackingConfigurationId__c</fullName>
    <description>Parent Web Tracking Configuration.</description>
    <inlineHelpText>Parent Web Tracking Configuration.</inlineHelpText>
    <label>Vlocity Web Tracking Configuration</label>
    <referenceTo>vlocity_ins__VlocityWebTrackingConfiguration__c</referenceTo>
    <relationshipLabel>Vlocity Web Tracking Event Types</relationshipLabel>
    <relationshipName>VlocityWebTrackingEventTypes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>